# SQLiteClone

./: CMakeLists.txt  main.c
interface/: Input.c  Input.h  InputBuffer.c  InputBuffer.h  MetaCommandResult.c  MetaCommandResult.h  PreparedResult.c  PreparedResult.h  Statement.c  Statement.h
